Contract Configurator 0.6.2
- Fixed issue where doing a module manager reload can fail some active contracts (thanks Samapico).
- Minor bug fixes.

Contract Configurator 0.6.1
- Fix for loading 0.5.x saves killing all contracts.

Contract Configurator 0.6.0
- Added SpawnVessel behaviour.
- Added ExperimentalPart behaviour.
- Added Docking parameter.
- Added TargetDestroyed parameter.
- Added VesselNotDestroyed parameter.
- Added VesselIsType parameter.
- Added SCANsatLocationCoverage requirement.
- Added Message behaviour.
- Add situation filter to Orbit parameter.
- Support for VALIDATION node in PartValidation to allow more terse validation for specific part recipes on a ship.
- Added CONTRACT_GROUP and extra logic for limiting contracts based on group.
- SCANsat coverage parameter now displays the current scan percentage.
- Improvements to HasPassengers (loads real passengers!)
- Fix to how contract expiry is handled - setting to 0.0 will now give a contract that never expires, similar to the way the deadline works.
- New debugging window that shows the underlying configurator and allows selectively disabling parts of the contract for testing.
- Can now add REQUIREMENT nodes as children to PARAMETER nodes.
- Performance fixes for requirement checks.
- Remove parameters that have been obsolete since Contract Configurator 0.5.0.

Contract Configurator 0.5.12
- Fixed KSPAssemblyDepdency issue indirectly caused by SCANsat (but due to broken depdency checking logic in KSP).

Contract Configurator 0.5.11
- Recompile for RemoteTech 1.6.2

Contract Configurator 0.5.10
- Fixed issue loading SCANsatCoverage parameter (thanks whiteout1911).

Contract Configurator 0.5.9
- Changes for SCANsat 9.0 (rc5)
- Fix for disableOnStateChange when there is no VesselGroupParameter (thanks voidheart).

Contract Configurator 0.5.8
- Recompile for RemoteTech 1.6.1
- Fix so that failing to load a contract is less destructive.

Contract Configurator 0.5.7